fixed aligning
make header slower

--- a/CSS/homeStyle.css
+++ b/CSS/homeStyle.css
@@ -173,22 +173,37 @@ body{
     border-left: 1px solid #000000;
 }
 
-#name{
-    margin-left: 5px;
+.name_div {
+    flex: 5.0;
+}
+
+.uploader_div {
+    flex: 1.6;
+}
+
+.upload_date_div {
+    flex: 0.8;
+}
+
+.upload_size_div {
+    flex: 0.8;
+}
+
+/* #name{
+    font-size: clamp(0.5rem, -0.875rem + 8.333vw, 3.5rem);
 }
 
 #upload_date{
-    margin-right: 8px;
+    font-size: clamp(0.5rem, -0.875rem + 8.333vw, 3.5rem);
 }
 
 #upload_size{
-    margin-right: 26px;
+    font-size: clamp(0.5rem, -0.875rem + 8.333vw, 3.5rem);
 }
 
 #uploader{
-    margin-left: auto;
-    margin-right: 175px;
-}
+    font-size: clamp(0.5rem, -0.875rem + 8.333vw, 3.5rem);
+} */
 
 /* SELECT ALL SELECT ALL SELECT ALL SELECT ALL SELECT ALL SELECT ALL SELECT ALL */
 
